Salesforce/src/objects/Companies__c.object
<CustomObject>
    <fields>
        <fullName>DATE__c</fullName>
        <label>DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMAIL_ID__c</fullName>
        <label>EMAIL ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MONTH_NUMBER__c</fullName>
        <externalId>true</externalId>
        <label>MONTH NUMBER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_the_city__c</fullName>
        <label>Name of the city</label>
        <picklist>
            <controllingField>Type_of_Industry__c</controllingField>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banglore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kolkata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahmedabad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRICE__c</fullName>
        <label>PRICE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Industry__c</fullName>
        <label>Type of Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cement industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>result__c</fullName>
        <formula>DATE( YEAR(  DATE__c ) + FLOOR((MONTH( DATE__c )+ MONTH_NUMBER__c ) / 12 ), IF(MOD(MONTH( DATE__c ) + MONTH_NUMBER__c ,12) = 0, 1, MOD(MONTH(DATE__c) + MONTH_NUMBER__c,12)) , DAY( DATE__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>result</label>
        <type>Date</type>
    </fields>
    <label>Companies</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>type of company</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VALIDATION_FOR_INDUSTRY</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Type_of_Industry__c,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Type_of_Industry__c</errorDisplayField>
        <errorMessage>ERROR</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VAL_ON_PRICE</fullName>
        <active>true</active>
        <errorConditionFormula>PRICE__c &lt; 5000</errorConditionFormula>
        <errorDisplayField>PRICE__c</errorDisplayField>
        <errorMessage>AMOUNT SHOULD NOT BE BELOW 5000</errorMessage>
    </validationRules>
</CustomObject>